--- a/index.html
+++ b/index.html
@@ -48,20 +48,18 @@
   <p>Cuando termines, guarda tu archivo y súbelo a GitHub si ya lo configuraste.</p>
 
   <hr>
-  <script>
+  <script>https://github.com/darioworks/cursos/blob/main/index.html
     // Escribe tus respuestas aquí abajo:
     // Ejercicios de práctica - Clase 1
     let name = "Darío";
     let age = 50;
     let student = true;
     let color = "azul";
-    let valornull = null;
 
     console.log("Nombre:", name);
     console.log("Edad:", age);
     console.log("¿Eres estudiante?:", student);
     console.log("Color favorito:", color);
-    console.log("Valor", null);
 
     // Ejercicios de práctica - Clase 2
     let mensaje = `Hola, me llamo ${name}, tengo ${age} años y mi color favorito es ${color}.`;
